--- a/styles/header.css
+++ b/styles/header.css
@@ -1,19 +1,37 @@
-.nav-bar {
-  background-color: #273357;
+header {
+/*  background-image: ;*/
+  background: linear-gradient(
+                    rgba(20,20,20, .1),
+                    rgba(20,20,20, .5)),
+                    url('../images/Main-background.jpg');
+  background-repeat: no-repeat;
+  text-align: center;
+  font-size: 1rem;
+  width: 100%;
+  height: 345px;
+  color: #e0e0e0;
+}
+
+.header-image {
+
+}
+
+.header__nav-bar {
+  opacity: .7;
   display: grid;
   grid-template-columns: 80% 20%;
 }
 
-.nav__search { 
+.header__nav__search { 
   grid-column: 1 / 2;
-  margin: .7rem 5px; 
+  margin: .7rem 20px; 
   padding: 0.5rem;           
   border: 1px solid black; 
   border-radius: 5px; 
   background-color: #e0e0e0;
-  font-size: 1rem;          
-  height: 2rem; 
-  width: 100%;  
+  font-size: .8rem;          
+  height: 1.3rem; 
+  width: 90%;  
   vertical-align: middle;  
   background-image: url('../images/magnifying-glass.svg');
   background-position: left;
@@ -23,49 +41,68 @@
   background-position-x: 10px;  
 }
 
-.nav-bar__button {
+.header__nav-bar__button {
   grid-column: 2;
-  height: 2rem;
-  width: 2rem;
+  height: 1.5rem;
+  width: 1.5rem;
   position: absolute;
-  right: 5px;
-  margin: .7rem 1px;
+  right: 22px;
+  margin: .6rem 1px;
 /*  margin-left: 1px;*/
   vertical-align: middle; 
 
 }
 
-.hamburger {
+.header__hamburger {
   background-color: #273357;
 }
 
-.hamburger__list {
+.header__hamburger__list {
   list-style: none;
   background-color: #273357;
   color: #e0e0e0;
   text-align: center;
   padding: 0;
   margin: 0;
+  position: relative;
+  z-index: 10;
 }
 
-.hamburger__list a {
+.header__hamburger__list a {
   text-decoration: none;
 }
 
-.hamburger__list__item {
+.header__hamburger__list__item {
   text-decoration: none;
   border: 1px #e0e0e0 solid;
   color: #e0e0e0;
   padding: 5px 0;
-/*  text-decoration: none;*/
+  font-size: 1rem;
 }
 
-.nav-bar__showHamburger {
+.header__nav-bar__showHamburger {
   background-image: url('../images/menu.svg');
   background-size: cover;
 }
 
-.nav-bar__exitHamburger {
+.header__nav-bar__exitHamburger {
   background-image: url('../images/cancel.svg');
   background-size: cover;
+}
+
+h1,
+h2 {
+  font-family: 'Spectral SC', serif;
+  text-shadow: 2px 2px 2px black
+}
+
+h1 {
+  margin: 0;
+  margin: 0 70px;
+  border-bottom: 1px white solid;
+}
+
+h2 {
+  font-size: 1.5rem;
+  margin-top: 10px;
 }
