--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import "header.css";
+@import "footer.css";
 
 *, 
 *:before,
@@ -7,140 +8,138 @@
 }
 
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nanum Myeongjo', serif;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 body {
   font-size: 62.5%;
-  background-color: #e0e0e0;
+  background-color: #677993;
   color: black;
 }
 
-header {
-  background-image: url('../images/Main-background.jpg');
-  background-repeat: no-repeat;
-  text-align: center;
-  font-size: 1rem;
+.landing-description {
+  position: relative;
+  z-index: 6;
+  bottom: 60px;
+  left: 7%;
+  width: 85%;
+  height: 333px;
+  background-color: #e0e0e0;
+  border: 1px black solid;
+  box-shadow: 1px 1px 1px 1px #273357;
+}
+
+.stock-image img {
+  height: 100%;
   width: 100%;
-  height: 200px;
-  color: #e0e0e0;
-}
-
-main {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 200px 200px 200px;
-}
-
-h1 {
-  margin: 0;
-}
-
-h2 {
-  font-size: 2rem;
 }
 
 h3 {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
-  width: 95%;
-  margin: 2rem auto;
+  width: 83%;
+  margin: 1rem;
 }
 
-p  {
-  width: 95%;
-  margin: 1rem auto;
-  font-size: .5rem;
-  text-align: left;
-}
-
+p, 
 a {
+  font-size: .6rem;
   text-align: center;
-  color: blue;
-  font-size: 0.5rem;
-  /*text-decoration: none;*/
 }
 
-.section-link-box p {
-  text-align: center;
-  vertical-align: middle;
-  font-size: 2rem;
-  border-radius: 15px;
-  margin: 0.5rem;
+.landing-description p {
+  margin: 1rem;
+  width: 85%;
+  text-align: justify;
 }
 
-.about {
-  grid-column: 1 / 2;
+main {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 200px 200px 250px 200px;
+  width: 89%;
+  left: 5%;
+  position: relative;
+  bottom: 60px;
+}
+
+.main-box {
+  border: 1px black solid;
+  box-shadow: 1px 1px 1px 1px #273357;
+  margin: 10px;
+}
+
+.stock-image {
+  grid-column: 1 / 3;
   grid-row: 1 / 2;
-  background-color: #3379A7;
 }
 
-.main-image {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  background-color: purple;
-}
-
-.data {
-  grid-column: 1 / 2;
+.description2 {
+  grid-column: 1 / 3;
   grid-row: 2 / 3;
-  background-color: #c7dcf9;
+  background-color: #a1d8cd6b; 
 }
 
-.resources {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  background-color: #3379A7;
+.description2 p {
+  padding: 20px;
 }
 
-.contact {
+.section-link-box {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
-  background-color: #3379A7;
-}
-
-.evaluation {
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-  background-color: #c7dcf9;
+  background-color: #e0e0e0;
+  display: grid;
+  grid-template-rows: 25% 25% 25% 25%;
 }
 
 .section-link-box a {
-  display: none;
-  font-size: 2rem;
-}
-
-.section-link-box:hover a {
-  display: block;
   text-decoration: none;
-  width: 100%;
-  border: 1px black solid;
-  height: 25%;
+  color: #273357;
   font-size: 1rem;
-  background-color: #677993;
+  font-weight: bold;
+  border-bottom: 1px #273357 solid;
+  vertical-align: middle;
+  margin: 0;
 }
 
-.section-link-box:hover p {
-  display: none;
+.about {
+  grid-row: 1 / 2;
 }
 
-footer {
-  background-color: #273357;
-  color: #e0e0e0;
+.data {
+  grid-row: 2 / 3;
 }
 
-.NREL-disclaimer {
-  font-size: 0.5rem;
-  padding: 1rem;
-  margin: 1rem auto;
-  width: 95%;
+.resources {
+  grid-row: 3 / 4;
 }
 
-.disclaimer-links {
-  text-align: center;
-  color: #e0e0e0;
-  font-size: 0.5rem;
-  /*text-decoration: none;*/
+.contact {
+  grid-row: 4 / 5;
 }
+
+.stock-image2 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.stock-image2 img {
+  height: 100%;
+  width: 100%;
+}
+
+.evaluation-box {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+  background-color: #e0e0e0;
+}
+
+
+
+
+
+
+
