--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 
 body {
   font-size: 62.5%;
-  background-color: #677993;
+  background-color: #e0f3f3;
   color: black;
 }
 
@@ -26,9 +26,9 @@ body {
   left: 7%;
   width: 85%;
   height: 333px;
-  background-color: #e0e0e0;
+  background-color: #fff;
   border: 1px black solid;
-  box-shadow: 1px 1px 1px 1px #273357;
+  box-shadow: 1px 1px 1px 1px #27335766;
 }
 
 .stock-image img {
@@ -59,16 +59,16 @@ a {
 main {
   display: grid;
   grid-template-columns: 70% 30%;
-  grid-template-rows: 200px 200px 250px 200px;
+  grid-template-rows: 200px 200px 250px 215px;
   width: 89%;
   left: 5%;
   position: relative;
-  bottom: 60px;
+  bottom: 55px;
 }
 
 .main-box {
   border: 1px black solid;
-  box-shadow: 1px 1px 1px 1px #273357;
+  box-shadow: 1px 1px 1px 1px #27335766;
   margin: 10px;
 }
 
@@ -80,7 +80,7 @@ main {
 .description2 {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  background-color: #a1d8cd6b; 
+  background-color: #fff; 
 }
 
 .description2 p {
@@ -90,7 +90,7 @@ main {
 .section-link-box {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
-  background-color: #e0e0e0;
+  background-color: #fff;
   display: grid;
   grid-template-rows: 25% 25% 25% 25%;
 }
@@ -100,9 +100,12 @@ main {
   color: #273357;
   font-size: 1rem;
   font-weight: bold;
-  border-bottom: 1px #273357 solid;
-  vertical-align: middle;
   margin: 0;
+}
+.section-link-box p {
+  padding: 15px;
+  margin: 0 13px;
+  border-bottom: 1px black solid;
 }
 
 .about {
@@ -117,8 +120,10 @@ main {
   grid-row: 3 / 4;
 }
 
-.contact {
+#contact {
   grid-row: 4 / 5;
+  border-bottom: none;
+      padding-bottom: 5px;
 }
 
 .stock-image2 {
@@ -134,7 +139,33 @@ main {
 .evaluation-box {
   grid-column: 1 / 3;
   grid-row: 4 / 5;
-  background-color: #e0e0e0;
+   position: relative;
+  background-color: #fff;
+  font-size: .6rem;
+}
+
+.evaluation-box img {
+  display: inline-block;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+
+.evaluation-box__text {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  display: inline-block;
+  margin: 0;
+  width: 150px;
+  text-align: center;
+}
+
+.evaluation-box h3 {
+  margin-right: 0;
+  font-size: .8rem;
+  margin-top: 20px;
+
 }
 
 
