--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,11 @@
 header {
 /*  background-image: ;*/
   background: linear-gradient(
-                    rgba(20,20,20, .1),
-                    rgba(20,20,20, .5)),
-                    url('../images/Main-background.jpg');
+                    rgba(212, 212, 212, 0.2),
+                    rgba(194, 192, 192, 0.5)),
+                    url('../images/earth-night.jpeg');
   background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   font-size: 1rem;
   width: 100%;
@@ -12,20 +13,16 @@ header {
   color: #e0e0e0;
 }
 
-.header-image {
-
-}
-
-.header__nav-bar {
+.header__search {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   opacity: .7;
-  display: grid;
-  grid-template-columns: 80% 20%;
 }
 
-.header__nav__search { 
-  grid-column: 1 / 2;
-  margin: .7rem 20px; 
-  padding: 0.5rem;           
+.header__search__input { 
+/*  margin: .7rem 20px; 
+  padding: 0.5rem;  */         
   border: 1px solid black; 
   border-radius: 5px; 
   background-color: #e0e0e0;
@@ -33,76 +30,28 @@ header {
   height: 1.3rem; 
   width: 90%;  
   vertical-align: middle;  
+  
+}
+
+header button {
   background-image: url('../images/magnifying-glass.svg');
   background-position: left;
   background-repeat: no-repeat;
-  background-size: 20px;   
-  text-indent: 20px;
-  background-position-x: 10px;  
+  background-size: 20px;
+  width: 30px;   
+  background-position-x: 0px; 
+  border-radius: 0 5px 5px 0; 
 }
 
-.header__nav-bar__button {
+/*.header__nav-bar__button {
   grid-column: 2;
   height: 1.5rem;
   width: 1.5rem;
   position: absolute;
   right: 22px;
   margin: .6rem 1px;
-/*  margin-left: 1px;*/
+
   vertical-align: middle; 
 
-}
+}*/
 
-.header__hamburger {
-  background-color: #273357;
-}
-
-.header__hamburger__list {
-  list-style: none;
-  background-color: #273357;
-  color: #e0e0e0;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  z-index: 10;
-}
-
-.header__hamburger__list a {
-  text-decoration: none;
-}
-
-.header__hamburger__list__item {
-  text-decoration: none;
-  border: 1px #e0e0e0 solid;
-  color: #e0e0e0;
-  padding: 5px 0;
-  font-size: 1rem;
-}
-
-.header__nav-bar__showHamburger {
-  background-image: url('../images/menu.svg');
-  background-size: cover;
-}
-
-.header__nav-bar__exitHamburger {
-  background-image: url('../images/cancel.svg');
-  background-size: cover;
-}
-
-h1,
-h2 {
-  font-family: 'Spectral SC', serif;
-  text-shadow: 2px 2px 2px black
-}
-
-h1 {
-  margin: 0;
-  margin: 0 70px;
-  border-bottom: 1px white solid;
-}
-
-h2 {
-  font-size: 1.5rem;
-  margin-top: 10px;
-}
