--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -11,6 +11,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 1em;
   margin: 0;
+  letter-spacing: 2px;
 }
 
 body {
@@ -43,6 +44,12 @@ header h2 {
 
 a {
   text-decoration: none;
+}
+
+p {
+  letter-spacing: 0;
+  font-size: 14px;
+  margin: 20px;
 }
 
 .header__nav__link {
@@ -99,12 +106,12 @@ h3 {
 
 .main__subtitle {
   text-align: center;
-  margin: 20px 0;
+  margin: 60px 0;
 }
 
 .main__subtitle__link {
-  font-size: 10px;
-  border: 1px black solid;
+  font-size: 13px;
+  border: 2px black solid;
   padding: 5px;
   margin: 0 16px;
 }
@@ -116,12 +123,17 @@ h3 {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 10px;
-  height: 400px;
+  height: 300px;
 }
 
 .main__collage__image {
   height: 100%;
-  width: 100%
+  width: 100%;
+  opacity: .8;
+}
+
+.main__collage__image:hover {
+  opacity: 1;
 }
 
 .main-image1 {
@@ -144,4 +156,46 @@ h3 {
   grid-row: 1 / 3;
 }
 
+/*WHAT IS SECTION*/
+
+.main__what-is {
+  height: 145px;
+  text-align: center;
+  margin: 60px auto;
+  width: 650px;
+}
+
+.main__what-is p {
+
+}
+/*DATA SETS*/
+
+.main__data-set {
+  height: 200px ;
+  text-align: center;
+}
+
+.main__data-set__image {
+  height: 150px;
+  width: auto;
+  display: inline;
+  margin: 3%;
+  border: 1px grey solid;
+}
+
+/*SUNSHOT INIATIVE*/
+.main__sunshot {
+  background: linear-gradient(
+                rgba(212, 212, 212, 0.2),
+                rgba(194, 192, 192, 0.5)),
+                url('../images/panels.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  height: 150px;
+}
+
+.main__sunshot p {
+
+}
 
