--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -31,15 +31,15 @@ header {
   text-align: center;
   font-size: 1em;
   width: 100%;
-  height: 330px;
+  height: 450px;
   color: #e0e0e0;
   margin-top: 20px;
-  border-top: 2px black solid;
+  border-top: 2px #696969 solid;
 }
 
 header h2 {
   padding: 70px 0 40px 0;
-  font-size: 1.4em;
+  font-size: 1.5em;
 }
 
 a {
@@ -52,10 +52,20 @@ p {
   margin: 20px;
 }
 
+:target h3 {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
 .header__nav__link {
   color: white;
-  font-size: .8em;
+  font-size: .9em;
   margin: 40px 55px;
+}
+
+.header__nav__link:hover {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 ul {
@@ -77,7 +87,6 @@ ul li {
 
 .header__search__input { 
   border-radius: 5px 0 0 5px; 
-
   font-size: 1em;
   height: 1.2em;
   width: 40%;  
@@ -85,7 +94,7 @@ ul li {
 }
 
 header button {
-  background-image: url('../images/magnifying-glass.svg');
+  background-image: url('../images/icons/magnifying-glass.svg');
   background-position: left;
   background-repeat: no-repeat;
   background-size: 15px;
@@ -101,7 +110,7 @@ h3 {
 }
 
 .main__subtitle h3 {
-  margin-bottom: 20px
+  margin-bottom: 27px
 }
 
 .main__subtitle {
@@ -111,9 +120,15 @@ h3 {
 
 .main__subtitle__link {
   font-size: 13px;
-  border: 2px black solid;
+  border: 2px #696969 solid;
   padding: 5px;
   margin: 0 16px;
+  color: black;
+}
+
+.main__subtitle__link:hover {
+  border: 5px #696969 solid;
+  font-weight: bold;
 }
 
 /*TOP IMAGE SECTION */
@@ -129,7 +144,7 @@ h3 {
 .main__collage__image {
   height: 100%;
   width: 100%;
-  opacity: .8;
+  opacity: .7;
 }
 
 .main__collage__image:hover {
@@ -159,10 +174,9 @@ h3 {
 /*WHAT IS SECTION*/
 
 .main__what-is {
-  height: 145px;
+  height: 220px;
   text-align: center;
-  margin: 60px auto;
-  width: 650px;
+  padding: 53px 15%;
 }
 
 .main__what-is p {
@@ -173,6 +187,7 @@ h3 {
 .main__data-set {
   height: 200px ;
   text-align: center;
+  margin: 50px 0;
 }
 
 .main__data-set__image {
@@ -186,16 +201,200 @@ h3 {
 /*SUNSHOT INIATIVE*/
 .main__sunshot {
   background: linear-gradient(
-                rgba(212, 212, 212, 0.2),
-                rgba(194, 192, 192, 0.5)),
+                rgba(212, 212, 212, 0.83),
+                rgba(194, 192, 192, 0.71)),
                 url('../images/panels.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  height: 150px;
+  height: 200px;
+  padding: 50px 15%;
+  background-position: bottom;
 }
 
 .main__sunshot p {
+/*  text-shadow: 2px 2px black;*/
+}
+
+/*EVALUATION*/
+.main__evaluation {
+  height: 200px;
+  text-align: center;
+  padding: 53px 15%;
+}
+
+
+/*IMAGE ROW*/
+.main__image-row {
+  height: 200px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  opacity: .7;
+}
+
+.main__image-row__image {
+  height: 100%;
+  width: 100%;
+}
+
+@media screen and (max-width: 845px) {
+
+  .main__what-is {
+    height: 250px;
+  }
+
+  .header {
+    height: 400px;
+  }
+
+  .header__search__input {
+    height: 1.6em;
+  }
 
 }
 
+@media screen and (max-width: 705px) {
+
+  .header {
+    height: 350px;
+  }
+
+
+  .header__nav__link {
+    margin: 40px 30px;
+  }
+
+  .main__collage {
+    grid-template-columns: repeat(3, 1fr);
+/*    grid-template-rows: repeat(3, 1fr);*/
+    grid-gap: 20px;
+    height: 300px;
+    margin: 0 35px;
+  }
+
+  .main-image1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+
+  .main-image2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  .main-image3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+  }
+  
+  .main-image4 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .main__what-is {
+    height: 260px;
+    padding: 37px 15%;
+  }
+
+  .main__sunshot {
+    height: 215px;
+  }
+
+}
+
+@media screen and (max-width: 585px) {
+  .header__nav__link {
+    margin: 36px 25px;
+  }
+  
+  .main__what-is {
+    height: 290px;
+  }
+
+  .main__sunshot {
+    height: 235px;
+    padding: 40px 15%;
+  }
+
+  .main__evaluation {
+    padding: 39px 15%;
+  }
+}
+
+@media screen and (max-width: 490px) {
+
+  .header h2 {
+    padding: 40px 0 20px 0;
+  }
+
+  .header li {
+    display: block;
+    padding: 10px;
+  }
+
+  .header__search {
+    margin-top: 17px;
+}
+
+  .main__subtitle {
+    margin: 40px 0;
+  }
+
+  .main__subtitle li {
+    display: block;
+    padding: 16px;
+  }
+
+  .main__subtitle h3 {
+    margin-bottom: 18px;
+  }
+
+  .main__collage {
+    grid-template-columns: repeat(2, 1fr);
+     grid-template-rows: repeat(2, 1fr); 
+    grid-gap: 0;
+    margin: 0;
+}
+
+  .main-image1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .main-image2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  .main-image3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  
+  .main-image4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .main__what-is {
+    height: 310px;
+  }
+
+  .main__sunshot {
+    height: 250px;
+    padding: 40px 15%;
+  }
+
+  .main__evaluation {
+    padding: 39px 15%;
+  }
+
+  .main__image-row {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 440px) {
+
+  }
