--- a/styles/footer.css
+++ b/styles/footer.css
@@ -15,7 +15,7 @@ footer {
   letter-spacing: 0;
 }
 
-a {
+footer a {
   letter-spacing: 0;
   margin: 0;
 }
@@ -43,4 +43,8 @@ footer a {
 .disclaimer__links:hover,
 footer a:hover {
   text-decoration: underline;
+}
+
+.disclaimer__NREL-disclaimer {
+  text-align: center;
 }
