--- a/styles/what-is-NSRDB-page.css
+++ b/styles/what-is-NSRDB-page.css
@@ -163,7 +163,7 @@ p {
   width: 90%;
 }
 
-.photo-footer {
+/*.photo-footer {
   position: relative;
   top: 165px;
   display: grid;
@@ -204,7 +204,7 @@ p {
 .footer-img-6 {
   grid-column: 6 / 7;
   grid-row: 1 / 2;
-}
+}*/
 
 
 
