--- a/styles/US-data.css
+++ b/styles/US-data.css
@@ -18,8 +18,6 @@
     rgba(194, 192, 192, 0.5)),
     url('../images/panels.jpg');
   background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .physical-solar-model__section {
@@ -36,11 +34,13 @@
     rgba(212, 212, 212, 0.2),
     rgba(194, 192, 192, 0.5)),
     url('../images/andreas-gucklhorn.jpg');
-  /*background-position: bottom;*/
+}
+
+.available-versions__section, 
+.data-availability {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 
 .drop-shadow-text-box {
   /*height: 70%;*/
