--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -47,20 +47,15 @@ a {
   text-decoration: none;
 }
 
-/*p,
-span {
-  letter-spacing: 0;
-}*/
-
 p {
-  font-size: 14px;
+
   margin: 20px;
-  font-family: 'PT Sans', sans-serif;
 }
 
-:target h3 {
-  text-decoration: underline;
-  font-weight: bold;
+p, li {
+  font-size: 15px;
+  font-family: 'PT Sans', sans-serif;
+  letter-spacing: 0;
 }
 
 .header__nav__link {
@@ -112,7 +107,16 @@ header button {
 /*TOP MAIN SECTION*/
 
 h3 {
-  font-size: 15px;
+  font-size: 18px;
+  border-bottom: 2px #69696994 solid;
+  margin: 20px auto;
+  padding: 10px;
+}
+
+:target h3 {
+  border: 2px black solid;
+  padding: 10px;
+  font-weight: bold;
 }
 
 .main__subtitle h3 {
@@ -121,10 +125,11 @@ h3 {
 
 .main__subtitle {
   text-align: center;
-  margin: 60px 0;
+  padding: 53px 15%;
 }
 
-.main__subtitle__link {
+.main__subtitle__link,
+.main__what-is__link {
   font-size: 13px;
   border: 2px #696969 solid;
   padding: 5px;
@@ -132,14 +137,10 @@ h3 {
   color: black;
 }
 
-.main__subtitle__link:hover {
+.main__subtitle__link:hover,
+.main__what-is__link:hover {
   border: 5px #696969 solid;
   font-weight: bold;
-}
-
-#read-more-text__what-is,
-#read-more-text__sunshot {
-  display: inline
 }
 
 .main__button {
@@ -187,32 +188,17 @@ h3 {
 /*WHAT IS SECTION*/
 
 .main__what-is {
-  height: 260px;
   text-align: center;
-  padding: 53px 20%;
+  padding: 53px 15%;
 }
 
-.main__what-is p {
+.main__what-is__link {
 
 }
-/*DATA SETS*/
 
-.main__data-set {
-  height: 200px ;
-  text-align: center;
-  margin: 50px 0;
-}
 
-.main__data-set__image {
-  height: 150px;
-  width: auto;
-  display: inline;
-  margin: 3%;
-  border: 1px grey solid;
-}
-
-/*SUNSHOT INIATIVE*/
-.main__sunshot {
+/*ACCESS DATA*/
+.main__data {
   background: linear-gradient(
                 rgba(212, 212, 212, 0.53),
                 rgba(194, 192, 192, 0.51)),
@@ -220,22 +206,159 @@ h3 {
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  height: 230px;
-  padding: 50px 20%;
+  padding: 50px 15%;
   background-position: bottom;
+
 }
 
-.main__sunshot p {
-    background-color: white;
-    opacity: 0.5;
-    padding: 10px;
+.main__data h3 {
+  margin: 20px auto;
+  width: 35%;
 }
 
-/*EVALUATION*/
-.main__evaluation {
-  height: 200px;
+.drop-shadow-text-box {
+  margin: 20px auto;
+  width: 45%;
+  padding: 5px;
+  background-color: #e5e5e5c2;
+}
+
+.ways-to-access-data {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  height: 400px;
+}
+
+article {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/andrew-neel.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+article:hover {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.7),
+    rgba(194, 192, 192, 0.8)),
+    url('../images/andrew-neel.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+/*article p {
+  width: 90%;
+}*/
+
+
+
+article h1 {
+  font-size: 2em;
+  color: #fff;
+  margin: 20px;
+  background-color: #e5e5e5c2;
+}
+
+h4 {
   text-align: center;
-  padding: 53px 20%;
+  background-color: #F1F1F1;
+  font-size: 2em;
+  padding: 16px;
+}
+
+.data-hide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+/*  background-color: #008CBA;*/
+}
+
+.ways-to-access-data:hover .data-hide {
+  opacity: 1;
+}
+
+.ways-to-access-data:hover .data-show {
+  opacity: 0;
+}
+
+.data-hide p {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 33%;
+  left: 0;
+/*  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);*/
+  text-align: center;
+}
+
+.data-hide a {
+  letter-spacing: 0;
+}
+
+.data-hide button {
+  position: absolute;
+  bottom: 40px;
+  left: 30px;
+  
+}
+
+
+/*.data-hide {
+    position: absolute;
+    bottom: -800px;
+    overflow: hidden;
+    max-height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    -moz-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -moz-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    -webkit-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    -o-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+.data-show {
+    -moz-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -moz-transition-timing-function: ease-in;
+    -webkit-transition-timing-function: ease-in;
+    -o-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    max-height: 1000px;
+    background-color: #AAA7A8;
+    overflow: hidden;
+}*/
+
+
+/*CONTRIBUTORS*/
+.main__contributors {
+  text-align: center;
+  padding: 53px 15%;
+}
+
+.main__contributors a {
+  letter-spacing: 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.main__contributors li {
+  list-style-type: square;
+  display: block;
 }
 
 
@@ -255,19 +378,19 @@ h3 {
 @media screen and (max-width: 845px) {
 
   .main__what-is {
-    height: 300px;
+/*    height: 300px;*/
   }
 
   .header {
-    height: 400px;
+/*    height: 400px;*/
   }
 
   .header__search__input {
     height: 1.6em;
   }
 
-  .main__sunshot {
-    height: 287px;
+  .main__data {
+/*    height: 287px;*/
   }
 
 }
@@ -275,7 +398,7 @@ h3 {
 @media screen and (max-width: 705px) {
 
   .header {
-    height: 350px;
+/*    height: 350px;*/
   }
 
 
@@ -289,7 +412,7 @@ h3 {
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     grid-gap: 20px;
-    height: 300px;
+/*    height: 300px;*/
 /*    margin: 0;*/
   }
 
@@ -314,12 +437,12 @@ h3 {
   }
 
   .main__what-is {
-    height: 260px;
+/*    height: 260px;*/
     padding: 37px 15%;
   }
 
-  .main__sunshot {
-    height: 300px;
+  .main__data {
+/*    height: 300px;*/
   }
 
 }
@@ -330,15 +453,15 @@ h3 {
   }
   
   .main__what-is {
-    height: 322px;
+/*    height: 322px;*/
   }
 
-  .main__sunshot {
-    height: 290px;
+  .main__data {
+/*    height: 290px;*/
     padding: 40px 15%;
   }
 
-  .main__evaluation {
+  .main__contributors {
     padding: 39px 15%;
   }
 }
@@ -373,7 +496,7 @@ h3 {
 
   .main__collage {
     grid-template-columns: repeat(2, 1fr);
-     grid-template-rows: repeat(2, 1fr); 
+    grid-template-rows: repeat(2, 1fr); 
     grid-gap: 0;
     margin: 0;
 }
@@ -399,15 +522,15 @@ h3 {
   }
 
   .main__what-is {
-    height: 370px;
+/*    height: 370px;*/
   }
 
-  .main__sunshot {
-    height: 350px;
+  .main__data {
+/*    height: 350px;*/
     padding: 40px 15%;
   }
 
-  .main__evaluation {
+  .main__contributors {
     padding: 39px 15%;
   }
 
@@ -426,18 +549,13 @@ h3 {
     margin: 0 10px 18px 10px;
   }
 
-  #read-more-text__what-is,
-  #read-more-text__sunshot {
-    display: none
-  }
-
-  .main__evaluation {
+  .main__contributors {
     padding: 33px 15%;
-    height: 210px;
+/*    height: 210px;*/
   }
 
-  .main__sunshot {
-    height: 300px;
+  .main__data {
+/*    height: 300px;*/
     padding: 40px 15%;
   }
 
