--- a/styles/international-data.css
+++ b/styles/international-data.css
@@ -1,46 +1,21 @@
 @import "landing-header.css";
 @import "main.css";
 @import "footer.css";
+@import "table.css";
 
-p a {
-  margin-right: 3px;
-  font-size: 1em;
+.available-data__section {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding: 10px;
+  margin: 30px 0;
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/solar-flare.jpeg');
+  background-position: right;
 }
 
-table {
-  width: 70%;
-  margin: 25px auto;
-  background-color: #fff;
-}
-
-th {
-  font-weight: bold;
-  font-size: 1.3em;
-  padding: 5px;
-  width: 30%;
-  background-color: #C6E0E1;
-  border-bottom: 2px #1a8e92 solid
-}
-
-td {
-  font-size: 1.2em;
-  padding: 5px;
-  width: 30%;
-  vertical-align: middle;
-}
-
-caption {
-  width: 55%;
-  font-size: 1.4em;
-  font-weight: bold;
-  margin: 20px auto;
-  text-align: left;
-}
-
-tr {
-  padding: 3px;
-  margin: 5px;
-}
 
 .international-list {
   text-align: center;
@@ -48,7 +23,7 @@ tr {
 
 .international-list__h3 {
   margin: 20px auto;
-  width: 35%;
+  width: 40%;
 }
 
 article {
@@ -103,7 +78,7 @@ article h1 {
 
 .hide {
     position: absolute;
-    bottom: -800px;
+    bottom: -1200px;
     overflow: hidden;
     max-height: 0;
     padding-top: 0;
@@ -138,6 +113,7 @@ article h1 {
 }
 
 .ref {
+  padding: 20px;
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
     rgba(194, 192, 192, 0.5)),
@@ -151,8 +127,8 @@ article h1 {
 }
 
 .ref ul {
-  margin: 30px auto 0 auto;
-  width: 55%;
+  margin: auto;
+  width: 65%;
   padding: 10px;
   background-color: #e5e5e5c2;
 }
