--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -151,12 +151,11 @@ h3 {
 
 .main__collage {
   display: grid;
-  grid-template-columns: repeat(4.5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 15px;
   height: 300px;
-  width: 75%;
-  margin: 15px auto;
+  margin: 15px 5%;
 }
 
 .main__collage__image {
@@ -166,23 +165,33 @@ h3 {
 }
 
 .main-image1 {
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
 
 .main-image2 {
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 
 .main-image3 {
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
   grid-row: 2 / 4;
 }
 
 .main-image4 {
-  grid-column: 4 / 5;
+  grid-column: 3 / 4;
   grid-row: 1 / 3;
+}
+
+.main-image5 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.main-image6 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 }
 
 /*WHAT IS SECTION*/
@@ -223,30 +232,53 @@ h3 {
   background-color: #e5e5e5c2;
 }
 
+#access-data .drop-shadow-text-box {
+  width: 100%;
+}
+
 .ways-to-access-data {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
-  height: 400px;
+  height: 250px;
 }
+
+.nsrdb-viewer {
+ background: url('../images/data-set-1.png');
+ background-size: cover;
+}
+
+.nsrdb-api {
+  background: url('../images/data-set-2.png');
+  background-size: cover;
+}
+
+.globus-data {
+  background: url('../images/data-set-3.png');
+  background-size: cover;
+}
+
 
 article {
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
-    rgba(194, 192, 192, 0.5)),
-    url('../images/andrew-neel.jpg');
-  background-size: cover;
+    rgba(194, 192, 192, 0.5));
+/*  background-size: cover;*/
   background-repeat: no-repeat;
   position: relative;
+  border: 2px black solid;
 }
+
+
+
 
 article:hover {
   background: linear-gradient(
     rgba(212, 212, 212, 0.7),
-    rgba(194, 192, 192, 0.8)),
-    url('../images/andrew-neel.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+    rgba(194, 192, 192, 0.8))
+    color: white;
+/*  background-size: cover;
+  background-repeat: no-repeat;*/
 
 }
 
@@ -257,16 +289,19 @@ article:hover {
 
 
 article h1 {
-  font-size: 2em;
-  color: #fff;
-  margin: 20px;
-  background-color: #e5e5e5c2;
+  font-size: 18px;
+  background-color: #9a9898c2;
+  padding: 24px 44px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h4 {
   text-align: center;
   background-color: #F1F1F1;
-  font-size: 2em;
+  font-size: 16px;
   padding: 16px;
 }
 
@@ -277,27 +312,34 @@ h4 {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 1s ease;
 /*  background-color: #008CBA;*/
 }
 
-.ways-to-access-data:hover .data-hide {
+/*.ways-to-access-data:hover .data-hide {
+  opacity: 1;
+}*/
+
+.nsrdb-viewer:hover .data-hide,
+.nsrdb-api:hover .data-hide,
+.globus-data:hover .data-hide {
   opacity: 1;
 }
 
-.ways-to-access-data:hover .data-show {
+.nsrdb-viewer:hover .data-show,
+.nsrdb-api:hover .data-show,
+.globus-data:hover .data-show {
   opacity: 0;
 }
 
 .data-hide p {
-  color: white;
+  color: black;
   font-size: 14px;
   position: absolute;
   top: 33%;
   left: 0;
-/*  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);*/
   text-align: center;
+  background-color: #e5e5e5c2
 }
 
 .data-hide a {
