--- a/styles/globus-data.css
+++ b/styles/globus-data.css
@@ -6,6 +6,12 @@
   padding: 40px;
 }
 
+.main__links__sections {
+  box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
+  border: 2px #69696994 double;
+  padding: 3px;
+}
+
 article {
   padding: 40px;
   border-top: 2px solid #696969;
@@ -65,3 +71,5 @@ img {
   left: 50%;
   transform: translate(-50%, 0);
 }
+
+
