--- a/styles/main.css
+++ b/styles/main.css
@@ -20,12 +20,10 @@ body {
   background-color: #e5e5e5;
 }
 
-
 h3 {
-  font-size: 1.5em;
+  font-size: 1.4em;
   margin: 20px auto;
   padding: 10px;
-  width: 15%;
   text-align: center;
 }
 
@@ -38,7 +36,7 @@ h3 {
 p {
   font-family: 'PT Sans', sans-serif;
   margin: 25px auto;
-  width: 45%;
+  width: 80%;
   font-size: 1.4em;
   line-height: 150%;
   letter-spacing: none;
@@ -52,16 +50,24 @@ p a {
   margin-right: 3px;
 }
 
+.main__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.main__links li {
+  padding: 10px;
+}
+
 .links__page {
   box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
   border: 2px #69696994 double;
   padding: 3px;
-  padding-bottom: 3px;
+  margin-right: 0
 }
 
 .drop-shadow-text-box {
-  margin: 20px auto;
-  width: 55%;
+  width: 90%;
   padding: 5px;
   background-color: #e5e5e5c2;
 }
@@ -71,4 +77,37 @@ p a {
 }
 .drop-shadow-text-box h3 {
   width: 60%;
+}
+
+@media screen and (min-width: 500px) {
+  .drop-shadow-text-box {
+    margin: 10px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  h3 {
+    width: 35%;
+  }
+
+  p {
+    width: 55%;
+  }
+
+  .drop-shadow-text-box {
+    margin: 20px auto;
+    width: 55%;
+  }
+
+  .main__links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  p {
+    width: 45%;
+  }
 }
