--- a/styles/main.css
+++ b/styles/main.css
@@ -106,7 +106,6 @@ p a {
 
   .drop-shadow-text-box {
     margin: 20px auto;
-    width: 55%;
   }
 
   .main__links {
@@ -116,8 +115,12 @@ p a {
   }
 }
 
-@media screen and (min-width: 1150px) {
+@media screen and (min-width: 1100px) {
   p {
     width: 45%;
+  }
+
+  .drop-shadow-text-box {
+    width: 65%;
   }
 }
