--- a/styles/globus-data.css
+++ b/styles/globus-data.css
@@ -13,9 +13,9 @@
 }
 
 article {
-  padding: 40px;
+  padding: 20px;
   border-top: 2px solid #696969;
-  margin: 0 60px;
+  margin: 0;
 }
 
 h3 {
@@ -26,11 +26,15 @@ h3 {
 }
 
 .globus-data-description p {
-  margin-top: 0;
+  margin: 0 auto;
 }
 
 .header__h2 {
   width: 265px;
+}
+
+.main__links {
+  display: none
 }
 
 .main__links li {
@@ -38,13 +42,14 @@ h3 {
 }
 
 p {
-  width: 55%;
+  width: 98%;
   letter-spacing: 0;
 
 }
 
 a {
-  letter-spacing: 0
+  letter-spacing: 0;
+  margin: 0;
 }
 
 .main__instructions p {
@@ -66,10 +71,49 @@ h4 {
 
 img {
   height: auto;
-  width: 65%;
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translate(-50%, 0);
 }
+
+@media screen and (min-width: 600px) {
+  p {
+    width: 85%;
+  }
+
+  article {
+    padding: 30px;
+    margin: 0 40px;
+  }
+
+  img {
+    width: 85%;
+  }
+
+}
+
+
+@media screen and (min-width: 850px) {
+  p {
+    width: 65%;
+  }
+
+  .main__links {
+    display: inherit;
+  }
+
+  article {
+    padding: 40px;
+    margin: 0 60px;
+  }
+
+  img {
+    width: 65%;
+  }
+
+}
+
+
 
 
