--- a/styles/landing-header.css
+++ b/styles/landing-header.css
@@ -142,7 +142,7 @@ a:hover {
 .search-input {
   position: absolute;
   bottom: 2px;
-  right: 10px;
+  right: 0;
   z-index: 1;
 }
 
@@ -152,7 +152,7 @@ a:hover {
   border: 1px solid #ccc;
   height: 40px;
   padding: 25px;
-  width: 60px;
+  width: 65px;
 }
 
 .search-input #search-bar:focus {
