--- a/styles/landing-header.css
+++ b/styles/landing-header.css
@@ -54,7 +54,7 @@ a:hover {
   opacity: 1;
 }
 
-.navigation ul,
+navigation ul,
 .sub-nav {
   list-style: none;
   margin: 0;
@@ -62,9 +62,9 @@ a:hover {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  z-index: 99999;
+  z-index: 99999;*/
   /*width: 180px;*/
-  background-color: #f8f8f8;
+ background-color: #f8f8f8;
   box-shadow: 1px 1px 3px #ccc;
 
   -webkit-transition:opacity 0.2s linear, visibility 0.2s linear;
@@ -119,11 +119,11 @@ a:hover {
 .search-contanier {
   display: table;
   position: absolute;
-  bottom: 4px;
-  right: 10px;
+  bottom: 10px;
+  right: 6px;
   margin: 0;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   /*z-index: 1;*/
 }
 
@@ -132,8 +132,8 @@ a:hover {
   position: relative;
   text-align: center;
   vertical-align: middle;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   z-index: 2;
   background-color: #d4d2d2ed;
   border: 1px solid #d4d2d2ed;
@@ -177,7 +177,7 @@ a:hover {
 }
 
 #search__magnifying-img {
-  width: 70%;
+  width: 100%;
 
 }
 
