--- a/styles/footer.css
+++ b/styles/footer.css
@@ -16,7 +16,8 @@ footer {
   font-size: 10px;
 }
 
-footer a {
+footer a,
+.disclaimer__github-link {
   letter-spacing: 0;
   margin: 0;
 }
@@ -34,7 +35,8 @@ footer ul {
 }
 
 .disclaimer__links,
-footer a {
+footer a,
+.disclaimer__github-link {
   text-decoration: none;
   color: #e0e0e0;
   font-size: 10px;
@@ -47,6 +49,12 @@ footer a:hover {
 
 .disclaimer__NREL-disclaimer {
   text-align: center;
+}
+
+.disclaimer__github-link {
+  text-align: center;
+  margin: auto;
+  padding-bottom: 12px;
 }
 
 @media screen and (min-width: 500px) {
