--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -56,6 +56,7 @@ p, li {
   font-size: 15px;
   font-family: 'PT Sans', sans-serif;
   letter-spacing: 0;
+  color: black;
 }
 
 .header__nav__link {
