--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,7 @@ p a {
 }
 
 .links__page {
+  font-size: 1.3em;
   box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
   border: 2px #69696994 double;
   padding: 3px;
