--- a/styles/resources.css
+++ b/styles/resources.css
@@ -19,6 +19,7 @@
   box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
   border: 2px #69696994 double;
   padding: 3px;
+  font-size: 1.3em;
 }
 
 h3 {
