Addjust the main link headers to be uniform

--- a/styles/TMY-page.css
+++ b/styles/TMY-page.css
@@ -34,7 +34,15 @@
   background-size: cover;
 }
 
-/*.TMY__h3 {
-  width: 25%;
+@media screen and (min-width: 800px) {
+  .main__links li  {
+    height: 50px;
+    /*width: 175px;*/
+  }
 }
-*/
+
+@media screen and (min-width: 1100px) {
+  .main__links li {
+    width: 200px;
+  }
+}
