--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ p a {
   flex-direction: column;
 }
 
-.main__links li {
+.main-links__li{
   position: relative;
   margin:  5px auto;
   padding: 10px;
@@ -63,7 +63,7 @@ p a {
   height: 35px;
 }
 
-.main__links li:hover {
+.main-links__li:hover {
   border: 2px #69696994 solid;
   background-color: #69696940;
 }
@@ -119,7 +119,7 @@ p a {
     justify-content: center;
   }
 
-  .main__links li {
+  .main-links__li {
     padding: 10px;
     margin: 0;
     margin-right: 20px;
