--- a/styles/resources.css
+++ b/styles/resources.css
@@ -6,21 +6,10 @@
   margin-bottom: 22px;
 }
 
-.resources-description li{
-  display: block;
-  margin: 4px 0;
-}
-
 .header__h2 {
   width: 128px;
 }
 
-.main__links__sections {
-  box-shadow: inset 0 -1px 1px rgba(0, 0, 0, 0.2);
-  border: 2px #69696994 double;
-  padding: 3px;
-  font-size: 1.3em;
-}
 
 h3 {
   border-bottom: 2px #696969 solid;
@@ -39,7 +28,12 @@ h4 {
 }
 
 p {
+  text-align: center;
   width: 90%;
+}
+
+.long-p {
+  text-align: left;
 }
 
 ol {
@@ -50,12 +44,33 @@ ol {
   margin: 25px 5%;
 }
 
+nav a {
+  color: #696969;
+  text-decoration: none;
+  font-size: 1.5em;
+  margin-right: 3em;
+}
+
+
+
 a {
   text-decoration: none;
   color: #696969;
   margin: 0;
   font-size: 1em;
   font-weight: bold;
+}
+
+.main__links__a {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5em;
+}
+
+.main__links__a:hover {
+  color: #fff;
 }
 
 #user-manuals {
@@ -95,7 +110,7 @@ a {
 @media screen and (min-width: 525px) {
   .resources-description li{
     display: inline-block;
-    margin: 0;
+    /*margin: 0;*/
   }
 
   .drop-shadow-text-box {
