--- a/styles/landing-header.css
+++ b/styles/landing-header.css
@@ -18,8 +18,8 @@ li {
 a {
   color: #696969;
   text-decoration: none;
-  font-size: 1.5em;
-  margin-right: 3em;
+  font-size: 1em;
+  margin-right: 2em;
 }
 
 a:hover {
@@ -37,14 +37,75 @@ a:hover {
   padding-bottom: 1px;
 }
 
+/*dropdown*/
+
+.nav__headers {
+  display: none
+}
+
+.nav__drop-down__button {
+  background-image: url(../images/icons/menu.svg);
+  background-color: #d4d2d2ed;
+  height: 45px;
+  width: 47px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.nav__drop-down__button: hover {
+  background-color: #696969;
+  border: 2px black solid;
+}
+
+.nav__drop-down {
+    position: relative;
+    display: inline-block;
+}
+
+.nav__drop-down__content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 250px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav__drop-down__content a {
+  color: black;
+  display:block;
+  font-size: 17px;
+  height: 40px;
+  margin: 0;
+  padding: 12px 10px;
+  margin-top: 10px;
+}
+
+.nav__drop-down__content a:hover {
+  background-color: #696969;
+  color: white;
+}
+
+.show {
+  display:block;
+}
+
+.cancel {
+  background-image: url(../images/icons/cancel.svg);
+    height: 45px;
+    width: 47px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /*search bar*/
-.search-contanier:focus {
+.search-container:focus {
   background-color: #d4d2d2ed;
   color: #333;
   outline: 0;
 }
 
-.search-contanier {
+.search-container {
   display: table;
   position: absolute;
   bottom: 10px;
@@ -98,7 +159,7 @@ a:hover {
   transition: all 0.5s;
 }
 
-.search-contanier: hover > #search-bar {
+.search-container: hover > #search-bar {
   padding-left: 60px;
   padding-right: 10px;
   width: 200px;
@@ -106,7 +167,6 @@ a:hover {
 
 #search__magnifying-img {
   width: 100%;
-
 }
 
 #search-bar {
@@ -161,6 +221,30 @@ a:hover {
   letter-spacing: 2px;
   text-align: center;
   text-underline-position: under;
+}
+
+@media screen and (min-width: 570px) {
+  a {
+    font-size: 1em;
+    margin-right: 2em;
+  }
+
+  .nav__headers {
+    display: inherit;
+  }
+
+  .nav__drop-down {
+    display: none
+  }
+
+}
+
+@media screen and (min-width: 845px) {
+  a {
+    font-size: 1.5em;
+    margin-right: 3em;
+  }
+
 }
 
 
