--- a/styles/US-data.css
+++ b/styles/US-data.css
@@ -21,21 +21,33 @@ table {
 .physical-solar-model__section, 
 .data-availability {
   width: 100%;
-  height: 100%;
   text-align: center;
   padding: 10px;
   margin: 30px 0;
 }
 
-.available-versions__section {
+.footer_image {
+  background: linear-gradient(
+    rgba(212, 212, 212, 0.2),
+    rgba(194, 192, 192, 0.5)),
+    url('../images/andreas-gucklhorn.jpg');
+    height: 250px;
+}
+
+.notes {
+  margin: 0 auto 10em;
+  
+}
+
+/*.available-versions__section {
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
     rgba(194, 192, 192, 0.5)),
     url('../images/panels.jpg');
   background-position: bottom;
-}
+}*/
 
-.physical-solar-model__section {
+./*physical-solar-model__section {
  
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
@@ -44,18 +56,19 @@ table {
   background-position: bottom;
 }
 
-.data-availability {
+.available-versions__section{
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
     rgba(194, 192, 192, 0.5)),
     url('../images/andreas-gucklhorn.jpg');
-}
+}*/
 
-.available-versions__section, 
+/*.available-versions__section, 
 .data-availability {
   background-size: cover;
   background-repeat: no-repeat;
-}
+}*/
+
 
 
 .pdf-links {
@@ -73,6 +86,14 @@ table {
 }
 
 @media screen and (min-width: 600px) {
+  h3 {
+    width: 14%;
+  }
+  .about-description {
+    margin-top: 3em;
+    height: 270px;
+  }
+
   .current-version__section caption {
     margin: 20px auto;
     width: 55%;
