Add drop shadow boxes to resource sections and add title for links

--- a/styles/resources.css
+++ b/styles/resources.css
@@ -21,7 +21,7 @@ h4 {
 }
 
 p {
-  text-align: center;
+  text-align: left;
   width: 90%;
 }
 
@@ -30,7 +30,7 @@ p {
 }
 
 ol {
-  margin: 25px 8%;
+  margin: 25px 2%;
 }
 
 #links ol {
@@ -43,15 +43,26 @@ main a {
   text-decoration: none;
 }
 
-/*nav a {
-  font-size: 1.5em;
-  margin-right: 3em;
-}*/
-
 main a {
   margin: 0;
-  font-size: 1em;
+}
+
+main ol a {
+  color: #493084;
+}
+
+main a:hover {
+  text-decoration: underline; 
+}
+
+main li a, main li, .manual-title {
+  font-family: 'PT Sans', sans-serif;
+  letter-spacing: 1px;
+/*  font-size: 11px,*/
+/*  margin: 0;*/
+  font-size: 1.1em;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
 
 .main__links__a {
@@ -62,37 +73,26 @@ main a {
   font-size: 1.5em;
 }
 
-#user-manuals {
-  background: linear-gradient(
-    rgba(212, 212, 212, 0.5),
-    rgba(194, 192, 192, 0.5))
-/*    url('../images/nyc-night.jpg'*/;
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 10px;
-}
-
 .drop-shadow-text-box {
-  margin: 0;
-  width: 98%;
+  margin: 20px auto;
+  width: 85%;
   padding: 5px;
-  background-color: #e5e5e5c2;
+  background: rgba(212, 212, 212, 0.5)
 }
 
 #publications li,
 #links li,
 #user-manuals li {
-    display: list-item;
+  display: list-item;
+
 }
 
-#publications {
-  background: linear-gradient(
-    rgba(212, 212, 212, 0.5),
-    rgba(194, 192, 192, 0.5));
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  padding: 10px;
+.manual-title {
+  display: block;
+
+  font-weight: bold;
+    font-size: 1.2em;
+    margin-bottom: 5px
 }
 
 .footer_image {
@@ -115,6 +115,12 @@ main a {
 
   p {
     width: 70%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  p {
+    margin: 25px auto
   }
 }
 
