--- a/styles/landing-header.css
+++ b/styles/landing-header.css
@@ -215,12 +215,11 @@ header p {
 }
 
 .header__h2 {
-  border: 3px #fff solid;
+  border-bottom: 3px #fff solid;
   margin: 3em auto;
   width: 250px;
   height: 30px;
-  padding-top: 1.5em;
-  padding-bottom: 5px;
+  padding: 1.5em 10px 5px 10px;
   font-size: 1.6em;
   font-weight: bold;
   letter-spacing: 2px;
@@ -229,9 +228,7 @@ header p {
 }
 
 @media screen and (min-width: 800px) {
-  .header__h1 {
-    margin-top: 4em;
-  }
+
 
   .nav__headers a {
     margin-right: 2em;
@@ -247,6 +244,10 @@ header p {
 }
 
 @media screen and (min-width: 845px) {
+  .header__h1 {
+    margin-top: 2em;
+  }
+
   .header {
     height:350px; 
   }
